# 3D-viewer

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
3D_viewer/: CMakeLists.txt
3D_viewer/include/: main_window.h  opengl_container.h  opengl_helper.h  opengl_window.h
3D_viewer/resource/: res.qrc  shader.frag  shader.vert
3D_viewer/resource/translator/: ZH_CN.qm  ZH_CN.ts
3D_viewer/source/: main.cpp  main_window.cpp  opengl_container.cpp  opengl_helper.cpp  opengl_window.cpp
3D_viewer_resource/: Sports Stadium.glb
cmake/: 3d_viewer.cmake  qt_library.cmake  third_library.cmake
model_resource/: Emoji With Glasses.glb
src/: CMakeLists.txt  i_draw_interface.h  main.cpp  main_window.cpp  main_window.h  render_container.cpp  render_container.h
src/opengl/: opengl_helper.cpp  opengl_helper.h  opengl_window.cpp  opengl_window.h
src/qt3d/: qt3d_window.cpp  qt3d_window.h
src/resource/: ZH_CN.qm  ZH_CN.ts  res.qrc  shader.vert
src/utils/: lru_queue.h  model_loader_manager.cpp  model_loader_manager.h  utils.h
src/vulkan/: vulkan_helper.cpp  vulkan_helper.h  vulkan_render.cpp  vulkan_render.h  vulkan_window.cpp  vulkan_window.h
third_library/qt-6.5.2/msvc2019_64/include/QtCore/: qconfig.h  qtcoreversion.h
third_library/qt-6.5.2/msvc2019_64/include/QtCore/6.5.2/QtCore/private/: qconfig_p.h
third_library/qt-6.5.2/msvc2019_64/include/QtGui/: qtguiversion.h
third_library/qt-6.5.2/msvc2019_64/include/QtOpenGL/: qtopenglexports.h  qtopenglversion.h
third_library/qt-6.5.2/msvc2019_64/include/QtOpenGLWidgets/: qtopenglwidgetsexports.h  qtopenglwidgetsversion.h
third_library/qt-6.5.2/msvc2019_64/include/QtWidgets/: qtwidgetsversion.h
third_library/qt-6.5.2/msvc2019_64/lib/: Qt6Core.lib  Qt6Gui.lib  Qt6OpenGLWidgets.lib  Qt6Widgets.lib
third_library/spdlog/lib/: spdlog.lib
third_library/spdlog/lib/cmake/spdlog/: spdlogConfigVersion.cmake
third_library/spdlog/lib/pkgconfig/: spdlog.pc
